IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11/11/05: Changed Splittilt to make more chunks when the X axis tilt requires
only a minimal number of extra slices in each chunk.

11/11/05: Implemented support for an unsigned 16-bit integer mode (6) for
MRC files, including in raw2mrc and tif2mrc.

11/11/05: Changed test for byte-swapped files so that image files can now be 
bigger than 60000 in 2 dimensions.

11/10/05: Etomo can automatically translate from local directory paths to
remote directory paths in a shared file system when running processchunks.
The translation information (mount rules) should be placed in the cpu.adoc
file.  Etomo will pass the remote directory path to processchunks using the -w
option.

11/8/05: Added options to Blendmont to control cross-correlation parameters,
including a VerySloppyMontage option that sets most of them appropriately, so
the program will work better with montages done by moving the stage.

11/7/05: Fixed bug that crashed Midas when trying to fix edges in a large
montage with missing pieces.

11/3/05: Fixed display of the parallel processing panel when it is first
opened in contracted state with no rows checked.

11/3/05: Stopped opening Tomogram Combination automatically after Done is
pressed in Tomogram Generation to prevent bad display of parallel processing
panel.

11/2/05: Fixed MTF filter monitor: it now works with montages and takes
starting and ending views into account.

11/2/05: Added midas limit to the Join Setup tab.

11/2/05: Added error messages for Setup Combine.

10/31/05: Implemented some workarounds to problems with loading many files
through the 3dmod startup dialog when the paths total > 32767 characters: 
removed current directory from names, warned user not to edit a truncated list.

10/31/05: Fixed the Save menu option in Join so that it works whether or not
Make Samples has been run.  Fixed the Save menu option in tomogram